--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,12 @@ dependencies:
     sdk: flutter
   flutter_map: ^0.11.0
   curved_navigation_bar: ^0.3.4
+  firebase_auth: ^0.20.1
+  firebase_core : ^0.7.0
   flutter_tts: ^2.1.0
+  fluttertoast: ^7.1.8
+
+
 
 
   # The following adds the Cupertino Icons font to your application.
