--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,7 @@ dependencies:
   firebase_core : ^0.7.0
   flutter_tts: ^2.1.0
   fluttertoast: ^7.1.8
-
-
-
+  cloud_firestore: ^0.16.0+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
