--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   fluttertoast: ^7.1.8
   cloud_firestore: ^0.16.0+1
   shared_preferences: ^0.5.12+4
+  http: ^0.12.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
