--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   cached_network_image: ^2.5.0
   webview_flutter: ^1.0.7
   geolocator: ^6.2.1
+  url_launcher: ^5.7.10
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
