--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   webview_flutter: ^1.0.7
   geolocator: ^6.2.1
   url_launcher: ^5.7.10
-
+  lite_rolling_switch: ^0.1.1
+  provider: ^4.3.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
