--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   url_launcher: ^5.7.10
   lite_rolling_switch: ^0.1.1
   provider: ^4.3.3
+  flutter_phoenix: "^0.1.0"
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
